# Tesseract-Web

./: .env.example  .gitignore  .prettierignore  LICENSE  Makefile  PRUEBA_CALCULATOR.md  README.md  TO-DO.md  TODO_TOKENS_Y_COSTOS.md  cloudbuild.yaml  docker-compose.yml  eslint.config.mjs  nx.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  replace_theme.js  replace_theme_2.js  tsconfig.json  vulnerabilites  workflow
Ixeh/: README.md  nx.json  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
apps/agents/: .dockerignore  Dockerfile  dockerfile  pyproject.toml  pytest.ini
apps/agents/src/: __init__.py  grpc_server.py  grpc_servicer.py  main.py
apps/agents/src/agents/v1/: agents_pb2.py  agents_pb2_grpc.py
apps/agents/src/api/: __init__.py  auth.py  deps.py  routes.py
apps/agents/src/core/: __init__.py  agent_factory.py  context.py  message_utils.py
apps/agents/src/graphs/: __init__.py  pipeline_agent.py  react_agent.py  router_agent.py  sequential_agent.py  supervisor_agent.py
apps/agents/src/tools/: __init__.py  calculator.py  human_handoff.py  registry.py  whatsapp_outbound.py
apps/agents/src/tools/google/: __init__.py  calendar.py  sheets.py
apps/agents/tests/: __init__.py  conftest.py  test_agent_factory.py  test_auth.py  test_calculator.py  test_context.py  test_google_calendar.py  test_human_handoff.py  test_message_conversion.py  test_pipeline_agentic.py  test_pipeline_router.py  test_react_agent.py  test_registry.py  test_routes.py
docs/: AGENTS.md  COOKIES_HTTPONLY.md  MULTI_TENANT_MIGRATION.md  (+8 more)
(+959 files in other folders)
