[project]
name = "tesseract-agents"
version = "0.1.0"
description = "AI Agents service for Tesseract"
authors = [
    {name = "Daniel Limon",email = "cervantesdaniellimon50m@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "langgraph (>=1.0.5,<2.0.0)",
    "langchain-google-vertexai (>=3.2.0,<4.0.0)",
    "fastapi (>=0.125.0,<0.126.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "redis (>=7.1.0,<8.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "litellm (>=1.80.10,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "ruff (>=0.14.10,<0.15.0)",
    "mypy (>=1.19.1,<2.0.0)"
]
